# scinet-queue

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_contact.md
.github/workflows/: ci.yml  release.yml
docs/: behavior.md
src/: app.rs  args.rs  bidi.rs  browser.rs  cdp.rs  doctor.rs  locks.rs  main.rs  output.rs  page.rs  papers.rs  queue.rs  scinet.rs
src/app/: fetch.rs  mod.rs  request.rs  session.rs
src/browser/: discovery.rs  mod.rs
src/scinet/: mod.rs  response.rs
tests/: cli_smoke.rs
tests/fixtures/scinet/: logged_out.html  pending.html  solved.html  working.html
