[package]
name = "scinet-queue"
version = "0.1.0"
edition = "2024"
description = "A tiny agent-friendly DOI queue for Sci-Net."
license = "MIT"
repository = "https://github.com/tivris/scinet-queue"

[[bin]]
name = "snq"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
ureq = { version = "3", default-features = false, features = ["json"] }
