[package]
name = "scinet-queue"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny agent-friendly DOI queue for Sci-Net."
readme = "README.md"
license = "MIT"
repository = "https://github.com/tivris/scinet-queue"
keywords = ["cli", "doi", "research", "sci-net"]
categories = ["command-line-utilities"]

[[bin]]
name = "snq"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
ureq = { version = "3", default-features = false, features = ["json"] }
